k8s-lab/dashbord/dashbord_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
